DeviceSettings: Add toast when headset is plugged while changing.
Also, add static context so it's easy to use it anywhere else.

--- a/DeviceSettings/res/values/strings.xml
+++ b/DeviceSettings/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DeviceSettings</string>
+    <string name="toast_replug_headset">Please replug headset.</string>
 </resources>
