Added new strings to Finnish translations

--- a/IDEOSX5Settings/res/values-fi/strings.xml
+++ b/IDEOSX5Settings/res/values-fi/strings.xml
@@ -40,4 +40,12 @@
 
     <string name="pref_sensors_mag_calib_title">Magneettisuussensorin kalibrointi</string>
     <string name="pref_sensors_mag_calib_summary">Poista edellinen kalibrointi</string>
+    
+
+    <string name="pref_hwaddr_title">HW-osoitteet</string>
+
+    <string name="pref_hwaddr_custom_title">Mukautetut HW-osoitteet</string>
+    <string name="pref_hwaddr_custom_summary">Käytä mukautettua BT/WLAN MAC-osoitetta</string>
+    <string name="pref_hwaddr_bt_title">Bluetoothin MAC-osoite</string>
+    <string name="pref_hwaddr_wlan_title">Wi-Fi:n MAC-osoite</string>
 </resources>
